2008-12-07  Matthias Clasen  <mclasen@redhat.com>
	
	Bug 526320 – should not list mounts that the user doesn't have 
	permission to use

	gunixmounts.c: Use g_access() to check accessibility of local devices.
	Patch by Martin Pitt

2008-12-01  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.2 ===

2008-12-01  Matthias Clasen  <mclasen@redhat.com>

	* gdatainputstream.c (g_data_input_stream_read_line): Revert the
	behaviour change, and update the docs instead, to avoid breaking
	existing users.

2008-12-01  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.1 ===

2008-12-01  Alexander Larsson  <alexl@redhat.com>

        * gio.symbols:
        * gmount.[ch]:
        * gunionvolumemonitor.c:
        * gvolume.c:
	Add and document g_mount_is_shadowed plus calls
	to set/unset a mount as shadowed
	
2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	* gio/tests/g-icon.c: Comment out two failing tests

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 555486 – No way to recover command line from GAppInfo

	* gio.symbols:
	* gappinfo.[hc]: Add g_app_info_get_commandline. Requested
	by Hans Petter Jansson.
	
	* gdesktopappinfo.c: And implement it here.

2008-11-28  Christian Dywan  <christian@imendio.com>

	* gappinfo.c: Fix a typo, s/detext/detect. Patch by Enrico Tröger.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 559633 – gtk_image_new_from_gicon does not always work for
	.desktop files

	* gdesktopappinfo.c (g_desktop_app_info_new_from_keyfile): Ignore
	extensions on icon names.  Proposed by Axel von Bertoldi.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 548163 – Nautilus displays wrong error message for too long file
	names

	* glocalfile.c (g_local_file_set_display_name): Correctly set
	error conditions if the new name is e.g. too long. Reported
	by Leonardo Ferreira Fontenelle.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 547481 – g_data_input_stream_read_line behaves not as stated in
	the docs
